# medical-research-fetcher

./: .gitignore  README.md  __init__.py  env.example  main.py  pyproject.toml  requirements.txt
lib/: __init__.py  config.py
lib/fetchers/: __init__.py
lib/fetchers/entrez/: __init__.py  base.py
lib/fetchers/entrez/pubmed/: __init__.py  client.py  models.py  parsers.py  types.py
lib/processors/: __init__.py  article_processor.py
lib/storage/: __init__.py  local.py
lib/utils/: __init__.py  rate_limit.py
